<resources>
    <string name="app_name">SinaAdAway</string>
    <string name="btn_active">激活</string>
    <string name="btn_ignore">忽略</string>
    <string name="toast_xposed_not_installed">未安装 Xposed Installer！</string>
    <string name="toast_exposed_not_installed">非太极环境!, EdXposed请至EdXposed Manager中勾选激活！</string>
    <string name="work_right_now">更改立即生效</string>
    <string name="work_after_reload">更改在结束软件进程或者重启后生效</string>
    <string name="msg_module_not_active">模块未激活，请先激活模块并重启手机！</string>
    <string name="tip_0">微博版本: Unknown(正在获取...)</string>
    <string name="hide_icon">隐藏模块桌面图标</string>
    <string name="active_module">启用模块</string>
    <string name="remove_all_ad">一键去广告</string>
    <string name="hide_follow_recommend">隐藏关注页直播推荐</string>
    <string name="hide_top_hongbao">隐藏首页右上角红包样式</string>
    <string name="auto_sign">自动签到</string>
    <string name="hide_hongbao">隐藏首页红包浮窗</string>
    <string name="auto_get_hongbao">自动领取浮窗红包</string>
    <string name="hide_mblog_ad">屏蔽时间线广告</string>
    <string name="cancel_hide_content_hot">取消屏蔽时间线热门</string>
    <string name="filter_content_key_word">屏蔽的内容关键词(,隔开)</string>
    <string name="filter_user_key_word">屏蔽的用户关键词(,隔开)</string>
    <string name="hide_detail_share">隐藏微博详情分享面板</string>
    <string name="hide_comment_follow_card">隐藏评论区关注面板</string>

</resources>
