<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" tools:ignore="MissingConstraints">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="10dp"
                tools:layout_editor_absoluteX="10dp">
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F2F2F2"/>
            <TextView
                    android:text="@string/tip_0"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" android:background="#F2F2F2" android:id="@+id/tip_0"
                    android:padding="10dp" android:textColor="#3e86a0"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F2F2F2"/>
            <Switch
                    android:text="@string/hide_icon"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/hide_icon" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <Switch
                    android:text="@string/active_module"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/active_module" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F2F2F2"/>
            <TextView
                    android:text="功能设置"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" android:background="#F2F2F2" android:id="@+id/tip_1"
                    android:padding="10dp" android:textColor="#3e86a0"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F2F2F2"/>
            <Switch
                    android:text="@string/skip_start_activity_ad"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/skip_start_activity_ad" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <Switch
                    android:text="@string/hide_top_hongbao"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/hide_top_hongbao" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <Switch
                    android:text="@string/auto_sign"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/auto_sign" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <Switch
                    android:text="@string/hide_hongbao"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/hide_hongbao" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <Switch
                    android:text="@string/auto_get_hongbao"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/auto_get_hongbao" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <Switch
                    android:text="@string/hide_content_ad"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/hide_content_ad" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <Switch
                    android:text="@string/cancel_hide_content_hot"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/cancel_hide_content_hot" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F2F2F2"/>
            <TextView
                    android:text="@string/filter_content_key_word"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:gravity="center_vertical"
                    android:id="@+id/filter_content_key_word"
                    android:padding="10dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F2F2F2"/>
            <TextView
                    android:text="@string/filter_user_key_word"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:gravity="center_vertical"
                    android:id="@+id/filter_user_key_word"
                    android:padding="10dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F2F2F2"/>
            <Switch
                    android:text="@string/hide_detail_ad"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/hide_detail_ad" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <Switch
                    android:text="@string/hide_detail_share"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/hide_detail_share" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <Switch
                    android:text="@string/hide_comment_ad"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/hide_comment_ad" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <Switch
                    android:text="隐藏微博头像挂件"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/hide_person_head_pendant" android:paddingLeft="10dp"
                    android:paddingRight="10dp" android:visibility="gone"/>
            <Switch
                    android:text="隐藏微博个性背景"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/hide_person_background" android:paddingLeft="10dp"
                    android:paddingRight="10dp" android:visibility="gone"/>
            <Switch
                    android:text="隐藏发现页导航栏"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/hide_find_page_nav" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <Switch
                    android:text="隐藏发现页轮播图"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/hide_find_page_carousel" android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            <Button
                    android:id="@+id/submit_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="问题反馈"/>
            <Button
                    android:id="@+id/download_apk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="下载"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F2F2F2"/>
            <TextView
                    android:text="支持作者"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" android:background="#F2F2F2" android:id="@+id/tip_2"
                    android:padding="10dp" android:textColor="#3e86a0"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F2F2F2"/>
            <Button
                    android:id="@+id/btn_zhifubao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="支付宝"/>
            <Button
                    android:id="@+id/btn_weixin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="微信(请选择相册第一张二维码)"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>